--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <ul>
           <li>
             <a
-              href="https://github.com/joseidris"
+              href="https://github.com/Idris-jose"
               target="_blank"
               rel="noopener noreferrer"
               data-testid="test-user-social-github"
@@ -45,7 +45,7 @@
           </li>
           <li>
             <a
-              href="https://twitter.com/joseidris"
+              href="https://x.com/IdrisByte"
               target="_blank"
               rel="noopener noreferrer"
               data-testid="test-user-social-twitter"
