Refactor profile card layout for improved responsiveness and accessibility

--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
         />
       </figure>
 
-      <header>
+      <div class="profile-content">
+        <header>
         <h2 id="header" data-testid="test-user-name">Jose Idris</h2>
       </header>
 
@@ -71,6 +72,7 @@
           <li>Messy code</li>
         </ul>
       </section>
+      </div>
     </article>
 
     <script>
