Add navigation and about/contact pages with responsive styles

--- a/index.html
+++ b/index.html
@@ -75,6 +75,14 @@
       </div>
     </article>
 
+    <nav>
+      <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="about.html">About</a></li>
+        <li><a href="contact.html">Contact</a></li>
+      </ul>
+    </nav>
+
     <script>
       document.getElementById("time").innerText =Date.now();
 
