--- a/about.html
+++ b/about.html
@@ -25,15 +25,15 @@
     <section data-testid="test-about-goals">
       <h2>Goals in This Program</h2>
       <ul>
-        <li>Deepen my understanding of semantic HTML and accessibility.</li>
-        <li>Strengthen my CSS layout and responsive design skills.</li>
+        <li>Deepen my understanding of frontend development.</li>
+        <li>Strengthen my knowledge in coverting tasks to functionalcode.</li>
         <li>Build confidence in JavaScript form handling and interactivity.</li>
       </ul>
     </section>
 
     <section data-testid="test-about-confidence">
       <h2>Areas of Low Confidence</h2>
-      <p>I want to become more confident in advanced CSS animations and clean JS structuring for larger projects.</p>
+      <p>I want to become more confident in advanced and clean JS structuring for larger projects.</p>
     </section>
 
     <section data-testid="test-about-future-note">
